tests/fails/failtrunc.t

terra foo() : {}
	return (foo())
end
foo()